--- a/src/products.html
+++ b/src/products.html
@@ -238,7 +238,9 @@
                                 <div class="fl-module-content fl-node-content">
                                   <div class="fl-cta-wrap fl-cta-inline">
                                     <div class="fl-cta-text">
-                                      <h3 class="fl-cta-title">Sentinel Interface Board</h3>
+                                      <h3 class="fl-cta-title">
+                                        Sentinel Interface Board
+                                      </h3>
                                       <div class="fl-cta-text-content"></div>
                                     </div>
                                   </div>
