Label the Sentinel as discontinued

--- a/src/products.html
+++ b/src/products.html
@@ -239,7 +239,7 @@
                                   <div class="fl-cta-wrap fl-cta-inline">
                                     <div class="fl-cta-text">
                                       <h3 class="fl-cta-title">
-                                        Sentinel Interface Board
+                                        Sentinel Interface Board (Discontinued)
                                       </h3>
                                       <div class="fl-cta-text-content"></div>
                                     </div>
